// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PillRatingGroup > (Snapshot) renders default unfavorited and undisliked state 1`] = `
<div>
  <div
    class="border-border bg-card inline-flex items-center rounded-full border-(length:--border-width) transition-colors h-8"
    data-testid="pill-rating-group"
  >
    <button
      aria-label="Add to favorites"
      class="flex cursor-pointer items-center justify-center rounded-l-full transition-colors h-full px-3 hover:bg-foreground/5 active:bg-foreground/10"
      data-testid="pill-favorite-button"
      title="Add to favorites"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart transition-colors text-foreground-secondary hover:text-foreground"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
    </button>
    <div
      class="bg-border h-3.5 w-px shrink-0"
    />
    <button
      aria-label="Dislike track"
      class="flex cursor-pointer items-center justify-center rounded-r-full transition-colors h-full px-3 hover:bg-foreground/5 active:bg-foreground/10"
      data-testid="pill-dislike-button"
      title="Dislike track"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-thumbs-down transition-colors text-foreground-secondary hover:text-accent-red"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 14V2"
        />
        <path
          d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`PillRatingGroup > (Snapshot) renders favorited state 1`] = `
<div>
  <div
    class="border-border bg-card inline-flex items-center rounded-full border-(length:--border-width) transition-colors h-7"
    data-testid="pill-rating-group"
  >
    <button
      aria-label="Remove from favorites"
      class="flex cursor-pointer items-center justify-center rounded-l-full transition-colors h-full px-2.5 hover:bg-foreground/5 active:bg-foreground/10"
      data-testid="pill-favorite-button"
      title="Remove from favorites"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-heart transition-colors fill-accent-red text-accent-red"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
        />
      </svg>
    </button>
    <div
      class="bg-border h-3.5 w-px shrink-0"
    />
    <button
      aria-label="Dislike track"
      class="flex cursor-pointer items-center justify-center rounded-r-full transition-colors h-full px-2.5 hover:bg-foreground/5 active:bg-foreground/10"
      data-testid="pill-dislike-button"
      title="Dislike track"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-thumbs-down transition-colors text-foreground-secondary hover:text-accent-red"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17 14V2"
        />
        <path
          d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22a3.13 3.13 0 0 1-3-3.88Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
